<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    tools:context=".b">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="80sp"
        android:text="@string/b"
        android:textSize="40sp"
        android:textColor="@color/colorPrimaryDark"
        />
    <TextView
        android:id="@+id/as1"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/as1"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/b1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/as2"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/as2"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/b2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/as3"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/as3"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/b3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/as4"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/as4"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/b4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/as5"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/as5"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/b5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:onClick="open"
        android:text="@string/enter"/>
</LinearLayout>