<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".finalactivity">
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"

        app:srcCompat="@mipmap/bg1" />
    <TextView
        android:id="@+id/title1"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="200sp"
        android:text="@string/final1"
        android:textSize="40sp"
        android:textColor="@color/colorPrimaryDark"

        />

    <TextView
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="77dp"

        android:gravity="center"
        android:text="@string/title2"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp" />

    <Button
        android:id="@+id/enterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"

        android:layout_marginBottom="163dp"
        android:gravity="center"
        android:onClick="open"
        android:text="@string/final2" />

</RelativeLayout>